# mirp-lab-2

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  results.csv
.github/workflows/: CI.yml
lib/: CMakeLists.txt
lib/common/: CMakeLists.txt
lib/common/include/common/: common.h  types.h
lib/string/: CMakeLists.txt
lib/string/include/string/: to_string.h  to_string_impl.h
lib/string/src/: to_string.c
lib/vector/: CMakeLists.txt
lib/vector/include/vector/: vector.h
lib/vector/src/: vector.c
scripts/: analyze_N.py
src/: benchmark.c  benchmark.h  cli.c  cli.h  execution.c  execution.h  main.c
src/parallel/: parallel.c  parallel.h
src/sequential/: sequential.c  sequential.h
