[project]
name = "mirp-lab-2-benchmarks"
version = "1.0.0"
description = "Collatz Benchmark Analysis Tools"
authors = [{name = "NSTU MIRP Lab 2"}]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
]

[dependency-groups]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pandas-stubs>=2.0.0",
]

[tool.black]
line-length = 80
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 80

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
